# mlx_transformers_benchmark

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  index.html  index_template.html  pyproject.toml
.github/workflows/: ci.yaml  tests-linux.yaml  tests-mac.yaml  tests.yaml  tests_mac.yaml  visualize-measurements.yaml  visualize.yaml
benchmark_visualizations/: index_template.html
mlx_transformers_benchmark/: __init__.py  file_io.py  measurement.py  platform_info.py  run_benchmark.py
mlx_transformers_benchmark/benchmarks/: __init__.py  base_benchmark.py  layer_norm.py  linear.py  mhsa.py  transformer_decoder_layer.py  transformer_encoder_layer.py
mtb/: __init__.py  attention_mask.py  dtypes.py  file_io.py  hardware_info.py  hf_utils.py  lmstudio_utils.py  measurement.py  memory.py  prompts.py  run_benchmark.py  run_layer_benchmark.py  run_llm_benchmark.py  run_operator_benchmark.py  select_benchmarks.py  software_info.py
mtb/benchmarks/: __init__.py  base_benchmark.py  layer_norm.py  linear.py  mhsa.py  scaled_dot_product_attention.py  softmax.py  transformer_decoder_layer.py  (+1 more)
scripts/: run_benchmarks.py  run_layer_benchmarks.py  run_llm_benchmarks.py  visualize_layer_benchmarks.py  visualize_llm_benchmarks.py  visualize_measurements.py
static/: styles.css
tests/: test_attention_mask.py  test_file_io.py  test_hardware_info.py  test_hf_utils.py  test_measurement.py  test_memory.py  test_run_benchmark.py  test_run_layer_benchmark.py  test_run_llm_benchmark.py  test_select_benchmarks.py  test_software_info.py
visualizations/: index_template.html
(+184 files in other folders)
