[tool.poetry]
name = "mlx_transformers_benchmark"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^1.5.2"
fire = "^0.7.0"
matplotlib = "^3.10.1"
memory-profiler = "^0.61.0"
mlx = "^0.24.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
setuptools = "^78.1.0"
transformers = "^4.50.1"
torch = "^2.6.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"

[tool.coverage.run]
source = ["mtb"]