[tool.poetry]
name = "mtb"
version = "0.1.0"
readme = "README.md"
description = "Benchmarking neural network layers on MLX+Metal vs torch+MPS"
authors = ["Auke Wiggers <wiggers.auke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^1.5.2"
fire = "^0.7.0"
Jinja2 = "^3.1.6"
matplotlib = "^3.10.1"
memory-profiler = "^0.61.0"
mlx = "^0.24.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
setuptools = "^78.1.0"
transformers = "^4.50.1"
torch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"

[tool.coverage.run]
source = ["mtb"]
branch = true  

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov --cov-report=term-missing --cov-report=html --disable-warnings -v"
